fix audio componenet visibility

--- a/src/Components/Definitions/Defintions.css
+++ b/src/Components/Definitions/Defintions.css
@@ -1,5 +1,4 @@
 .meanings {
-  display: flex;
   flex-direction: column;
   overflow-y: scroll;
   scrollbar-width: thin;
